add: profile picture

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="card">
-        <div class="profile-picture"></div>
+        <img src="images/IMG_7792.jpg" alt="あつし プロフィール写真" class="profile-picture">
         <h1 class="name">あつし</h1>
         <p class="bio">アプリ制作者</p>
         <div class="links">
