feat: Add link to Agentory Pages

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <i class="fab fa-github"></i>
                 GitHub
             </a>
+            <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer">
+                <i class="fas fa-link"></i>
+                Agentory Pages
+            </a>
         </div>
     </div>
 </body>
