--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
                 <i class="fab fa-github"></i>
                 GitHub
             </a>
-            <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer">
-                <i class="fas fa-link"></i>
-                Agentory Pages
+        </div>
+        <div class="product-section">
+            <h2>Product</h2>
+            <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer" class="product-link">
+                Agentory
             </a>
+            <p class="development-status">(under development)</p>
         </div>
     </div>
 </body>
