modified: profile pic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="card">
         <img src="images/profile.jpg" alt="あつし プロフィール写真" class="profile-picture">
         <h1 class="name">あつし</h1>
-        <p class="bio">アプリ制作者</p>
+        <p class="bio">創作者</p>
         <div class="links">
             <a href="https://github.com/MediMadhi" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
@@ -22,7 +22,7 @@
             </a>
         </div>
         <div class="product-section">
-            <h2>Product</h2>
+            <h2>Project</h2>
             <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer" class="product-link">
                 Agentory
             </a>
