modified: product → project

--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
         <div class="links">
             <a href="https://github.com/MediMadhi" target="_blank" rel="noopener noreferrer">
                 <i class="fab fa-github"></i>
-                GitHub
             </a>
         </div>
-        <div class="product-section">
+        <div class="project-section">
             <h2>Project</h2>
-            <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer" class="product-link">
-                Agentory
-            </a>
-            <p class="development-status">(under development)</p>
+            <div class="project-item">
+                <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer">
+                    Agentory
+                </a>
+                <p class="development-status">(iOS App: under development)</p>
+            </div>
         </div>
     </div>
 </body>
