modified: Agentory Link changed to cosmorphe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="project-section">
             <h2>Project</h2>
             <div class="project-item">
-                <a href="https://medimadhi.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer">
+                <a href="https://cosmorphe.github.io/agentory-pages/" target="_blank" rel="noopener noreferrer">
                     Agentory
                 </a>
                 <p class="development-status">(iOS App: under development)</p>
